@@ -1,16 +1,19 @@
-LIBSSH = ../windows/libssh-0.8.3
+VERSION = 0.27.8
+RWINLIB = ../windows/libgit2-${VERSION}
 
 PKG_CPPFLAGS = -DLIBSSH_STATIC \
-	-I${LIBSSH}/include
+	-I${RWINLIB}/include
 
 PKG_LIBS = \
-	-L${LIBSSH}/lib${R_ARCH} \
+	-L${RWINLIB}/lib${R_ARCH} \
 	-lssh -lcrypto -lz -lws2_32 -lgdi32 -lcrypt32
 
 all: clean winlibs
 
-clean:
-	rm -f $(OBJECTS) $(SHLIB)
-
 winlibs:
-	"${R_HOME}/bin${R_ARCH_BIN}/Rscript.exe" --vanilla "../tools/winlibs.R"
+	"${R_HOME}/bin${R_ARCH_BIN}/Rscript.exe" "../tools/winlibs.R" $(VERSION)
+
+clean:
+	rm -f $(SHLIB) $(OBJECTS)
+
+.PHONY: all winlibs clean
